debug2/tests/ui/compile_fail_non_debug_field.rs
struct NonDebug;

#[derive(Debug)]
struct MyDebug {
    field: NonDebug,
}

fn main() {}
